fix layout issue of figures inside .go* layout classes

--- a/user/themes/longread/scss/custom.scss
+++ b/user/themes/longread/scss/custom.scss
@@ -239,6 +239,10 @@ button, .uk-button {
       padding: 10px 10px;
     }
   }
+  figure {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
 }
 
 // colour and font styling of side note
